--- a/requirements-mkdocs.txt
+++ b/requirements-mkdocs.txt
@@ -13,16 +13,20 @@ Markdown==3.3.3
 MarkupSafe==1.1.1
 mkdocs==1.1.2
 mkdocs-git-revision-date-localized-plugin==0.8
+mkdocs-macros-plugin==0.5.0
+mkdocs-macros-test==0.1.0
 mkdocs-material==6.2.4
 mkdocs-material-extensions==1.0.1
 mkdocs-minify-plugin==0.3.0
 nltk==3.5
 Pygments==2.7.3
 pymdown-extensions==8.1
+python-dateutil==2.8.1
 pytz==2020.5
 PyYAML==5.3.1
 regex==2020.11.13
 six==1.15.0
 smmap==3.0.4
+termcolor==1.1.0
 tornado==6.1
 tqdm==4.56.0
