--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,14 +72,17 @@ markdown_extensions:
 # Page tree
 nav:
   - Home: index.md
+  - Getting Started:
+    - Installation: getting-started/installation.md
+    - CLI: getting-started/run-cli.md
   - Core:
     - All tools: core/alltools.md
-    - CLI: core/run-cli.md
     - EVMC: core/evmc.md
   - APIs:
     - JSON-RPC: apis/jsonrpc-apis.md
     - OpenRPC: apis/openrpc.md
   - Developers:
+    - Build from source: developers/build-from-source.md
     - Documentation: developers/documentation.md
     - Versioning: developers/versioning.md
     - New release: developers/create-new-release.md
